@@ -8,7 +8,6 @@
 	<description>A sets of testing cases for ZK project</description>
 	<properties>
 		<selenium.version>2.37.0</selenium.version>
-		<report.dir>${project.build.directory}/surefire-reports</report.dir>
 	</properties>
 	<repositories>
 		<repository>
@@ -248,17 +247,6 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-				<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
-				<configuration>
-					<reportsDirectory>${report.dir}</reportsDirectory>
-					<forkCount>3</forkCount>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					<reuseForks>true</reuseForks>
-				</configuration>
-			</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
